fixed alignment bug on 'work' section

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ figure.two-img:hover img:last-child {opacity:1;}
   .flex-grid .headings li:last-child {width:calc(90vw - 610px);}
 }
 @media screen and (min-width:1200px) {
-  .work {overflow-x:unset;padding:40px 0;}
+  .work {overflow-x:unset;}
   .work::after {content:unset;}
   .work header {padding:0;}
   .flex-grid.phase {margin-left:calc(-50vw + 600px);padding:0 5vw 40px;width:90vw;}
